[manager]: больше данных из orthanc при загрузке dicom; автоматический флоу загрузки больше не ломается из-за дедлока orthanc
