# dicom-manager/cmd/service/main.go
@@ -7,9 +7,11 @@ import (
 
 	_ "github.com/jackc/pgx/v5/stdlib"
 	"github.com/pressly/goose/v3"
+	api_dicom_get_by_id "github.com/yogenyslav/ldt-2026/dicom-manager/internal/api/dicom/get_by_id"
 	api_dicom_get_image "github.com/yogenyslav/ldt-2026/dicom-manager/internal/api/dicom/get_image"
 	api_dicom_upload "github.com/yogenyslav/ldt-2026/dicom-manager/internal/api/dicom/upload"
 	api_dicom_upload_batch "github.com/yogenyslav/ldt-2026/dicom-manager/internal/api/dicom/upload_batch"
+	api_dicom_upload_orthanc "github.com/yogenyslav/ldt-2026/dicom-manager/internal/api/dicom/upload_orthanc"
 	api_job_get_by_dicom_id "github.com/yogenyslav/ldt-2026/dicom-manager/internal/api/job/get_by_dicom_id"
 	api_job_get_by_id "github.com/yogenyslav/ldt-2026/dicom-manager/internal/api/job/get_by_id"
 	api_job_get_paginated "github.com/yogenyslav/ldt-2026/dicom-manager/internal/api/job/get_paginated"
@@ -26,6 +28,7 @@ import (
 	storage_organization "github.com/yogenyslav/ldt-2026/dicom-manager/internal/storage/organization"
 	storage_report "github.com/yogenyslav/ldt-2026/dicom-manager/internal/storage/report"
 	storage_user "github.com/yogenyslav/ldt-2026/dicom-manager/internal/storage/user"
+	uc_dicom_get_by_id "github.com/yogenyslav/ldt-2026/dicom-manager/internal/usecases/dicom/get_by_id"
 	uc_dicom_get_image "github.com/yogenyslav/ldt-2026/dicom-manager/internal/usecases/dicom/get_image"
 	uc_dicom_upload "github.com/yogenyslav/ldt-2026/dicom-manager/internal/usecases/dicom/upload"
 	uc_job_decision "github.com/yogenyslav/ldt-2026/dicom-manager/internal/usecases/job/decision"
@@ -161,9 +164,14 @@ func run() error {
 		logger, metrics, uow, dicomStorage, jobStorage, orthancClient, dicomWorkerClient.Client(),
 	)
 	dicomRouter := srv.Router("dicom")
+	getDicomByID := uc_dicom_get_by_id.New(logger, metrics, dicomStorage)
+	dicomRouter.Get("/:dicom_id", api_dicom_get_by_id.New(logger, metrics, getDicomByID).GetByID)
 	getJobsByDicomID := uc_job_get_by_dicom_id.New(logger, metrics, jobStorage, dicomStorage)
 	dicomRouter.Get("/:dicom_id/jobs", api_job_get_by_dicom_id.New(logger, metrics, getJobsByDicomID).GetByDicomID)
 	dicomRouter.Get("/:dicom_id/image", api_dicom_get_image.New(logger, metrics, getDicomImage).GetImage)
+	orthancUpload := api_dicom_upload_orthanc.New(logger, uploadDicom)
+	dicomRouter.Post("/upload/orthanc", orthancUpload.Upload)
+	dicomRouter.Post("/upload/orthanc/:dicom_id/process", orthancUpload.Start)
 	dicomRouter.Post("/upload", api_dicom_upload.New(logger, metrics, uploadDicom).Upload)
 	dicomRouter.Post("/upload/batch", api_dicom_upload_batch.New(logger, metrics, uploadDicom).UploadBatch)
 
