# dicom-manager/docs/swagger.yaml
@@ -63,6 +63,38 @@ definitions:
       id:
         type: string
     type: object
+  internal_api_dicom_get_by_id.GetByIDOut:
+    properties:
+      created_at:
+        type: string
+      creator_id:
+        type: integer
+      device_model:
+        type: string
+      dicom_image_uid:
+        description: Внутреннее поле из DICOM файла.
+        type: string
+      dicom_series_uid:
+        description: Внутреннее поле из DICOM файла.
+        type: string
+      dicom_study_uid:
+        description: Внутреннее поле из DICOM файла.
+        type: string
+      file_name:
+        type: string
+      id:
+        type: string
+      organization_id:
+        type: integer
+      patient_id:
+        type: string
+      series_id:
+        description: Поле из Orthanc.
+        type: string
+      study_id:
+        description: Поле из Orthanc.
+        type: string
+    type: object
   internal_api_job_get_by_id.GetByIDOut:
     properties:
       job:
@@ -283,9 +315,73 @@ definitions:
           $ref: '#/definitions/upload_batch.DicomData'
         type: array
     type: object
+  upload_orthanc.UploadIn:
+    properties:
+      device_model:
+        type: string
+      dicom_id:
+        type: string
+      dicom_image_uid:
+        type: string
+      dicom_series_uid:
+        type: string
+      dicom_study_uid:
+        type: string
+      file_name:
+        type: string
+      patient_id:
+        type: string
+      series_id:
+        type: string
+      study_id:
+        type: string
+    type: object
+  upload_orthanc.UploadOut:
+    properties:
+      dicom_id:
+        type: string
+    type: object
 info:
   contact: {}
 paths:
+  /dicom/{dicom_id}:
+    get:
+      consumes:
+      - application/json
+      description: Получить DICOM-файл по его идентификатору, включая метаданные пациента
+        и аппарата, без updated_at.
+      parameters:
+      - description: DICOM ID
+        in: path
+        name: dicom_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: DICOM-файл успешно получен.
+          schema:
+            $ref: '#/definitions/internal_api_dicom_get_by_id.GetByIDOut'
+        "400":
+          description: Некорректный запрос.
+          schema:
+            type: string
+        "403":
+          description: Доступ запрещен.
+          schema:
+            type: string
+        "404":
+          description: DICOM-файл не найден.
+          schema:
+            type: string
+        "500":
+          description: Внутренняя ошибка сервера.
+          schema:
+            type: string
+      summary: Получить DICOM-файл
+      tags:
+      - dicom
   /dicom/{dicom_id}/image:
     get:
       consumes:
@@ -439,6 +535,69 @@ paths:
           schema:
             type: string
       summary: Загрузить DICOM файлы батчами
+      tags:
+      - dicom
+  /dicom/upload/orthanc:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Метаданные файла в Orthanc
+        in: body
+        name: file
+        required: true
+        schema:
+          $ref: '#/definitions/upload_orthanc.UploadIn'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/upload_orthanc.UploadOut'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "403":
+          description: Forbidden
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Зарегистрировать файл из Orthanc
+      tags:
+      - dicom
+  /dicom/upload/orthanc/{dicom_id}/process:
+    post:
+      parameters:
+      - description: ID экземпляра Orthanc
+        in: path
+        name: dicom_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "202":
+          description: Accepted
+          schema:
+            $ref: '#/definitions/upload_orthanc.UploadOut'
+        "403":
+          description: Forbidden
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Запустить обработку зарегистрированного файла Orthanc
       tags:
       - dicom
   /job/info:
